Replace 'ksplice kernel upgrade' with 'uptrack-upgrade', better way to disable ksplice/yum-cron cron jobs.

--- a/al-config-1.0/install/etc/al-config/al.conf
+++ b/al-config-1.0/install/etc/al-config/al.conf
@@ -4,7 +4,7 @@
 # scripts al-update, al-notify for configuration.
 #
 # OCI notification service topic name
-topic=AL-test
+topic=
 #
 # OCI Compartment name:
-compartment=Autonomous
+compartment=
