Fix topos in output messages

--- a/al-config-1.0/install/usr/lib/systemd/system/al-config.service
+++ b/al-config-1.0/install/usr/lib/systemd/system/al-config.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Autonomous Linux configuration service
-After=uptrack-prefetch.service yum-cron.service
+After=uptrack-prefetch.service
 Before=crond.service
+Conflicts=yum-cron.service
 
 [Service]
 Type=oneshot
